<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>vantruong</groupId>
	<artifactId>nest-store-backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>nest-store-microservices</name>
	<description>Information Systems Thesis</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
	</dependencies>

	<modules>
		<module>eureka-server</module>
		<module>api-gateway</module>
		<module>inventory-service</module>
		<module>product-service</module>
		<module>identity-service</module>
		<module>order-service</module>
		<module>cart-service</module>
		<module>notification-service</module>
		<module>book-service</module>
		<module>address-service</module>
		<module>payment-service</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
